<resources>
    <string name="app_name">NaugthyVideo</string>

    <string name="hello_blank_fragment">Hello blank fragmentFriendList</string>
    <!--menu-->
    <string name="BACU_UP">Backup</string>
    <string name="DELETE">Delete</string>
    <string name="SETTINGS">Settings</string>
    <!--nav menu-->
    <string name="nav_function">功能</string>
    <string name="nav_home">首页</string>
    <string name="nav_part_slide">电影Top250</string>
    <string name="nav_card_slide">卡片滑动</string>
    <string name="nav_live_broadcast_play">直播</string>
    <string name="nav_player">播放器</string>
    <string name="nav_settings">设置</string>
    <string name="yes">确定</string>
    <!--login&register-->
    <string name="login">登     录</string>
    <string name="register">注      册</string>
    <string name="phone_numbwe">手机号：</string>
    <string name="password">密码：</string>
    <string name="remember_password">记住密码</string>
    <string name="password_repeat">重复：</string>
    <string name="nickname">昵称：</string>
    <string name="identifying_code">验证码：</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex_tip">Tip：性别注册后不可修改</string>

    <string name="dl_open">打开</string>
    <string name="dl_close">关闭</string>
    <string name="live_swipe_delete">删除</string>
    <!--设置-->
    <string name="vitamio_player">Vitamio播放器</string>
    <string name="ijk_player">Ijk播放器</string>
    <string name="auto_login">自动登录</string>
    <string name="logout">登     出</string>

    <!--chatHome-->
    <string name="chat_room">聊天室</string>
    <string name="friend_message">消息</string>

    <!--播放器-->
    <string name="change_ratio">切换比例</string>

    <!--movieDetail-->
    <string name="movie_synopsis">剧情简介</string>
    <string name="movie_short_commentary">短评</string>

    <string-array name="right_title_name">
        <item>最新价</item>
        <item>涨幅</item>
        <item>成交量</item>
        <item>最高</item>
        <item>最低</item>
        <item>买一</item>
        <item>卖一</item>
        <item>量比</item>
    </string-array>

    <!--transitionName-->
    <string name="transition_movie_name">transition_movie_name</string>
    <string name="transition_movie_img">transition_movie_img</string>
    <string name="transition_movie_describe">transition_movie_describe</string>
    <string name="transition_movie_average">transition_movie_average</string>
    <string name="transition_movie_direct_name">transition_movie_direct_name</string>
    <string name="transition_movie_genre">transition_movie_genre</string>

    <!--ijkPlayer-->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="title_activity_change_user_info">ActivityChangeUserInfo</string>

    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
</resources>
