<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_function_tabs"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_function"
            android:title="@string/nav_function"/>
        <item
            android:id="@+id/nav_part_slide"
            android:title="@string/nav_part_slide"
            />
        <item
            android:id="@+id/nav_function_4"
            android:title="功能4"
            />
        <item
            android:id="@+id/nav_function_5"
            android:title="功能5"
            />

    </group>
    <group
        android:id="@+id/nav_group_system_function"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"/>

    </group>

</menu>