<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc_0775.naugthyvideo.fragment.FragmentRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/nickname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_register_nickname"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/phone_numbwe"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_register_phone_number"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp" />
            <Switch
                android:id="@+id/switch_register_if_show"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/selector_password_icon"
                android:switchMinWidth="24dp"
                android:textOff=" "
                android:textOn=" "
                android:thumb="@drawable/switch_track_login"
                android:thumbTextPadding="6dp"
                android:track="@drawable/switch_track_login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password_repeat"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_register_password_repeat"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sex"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="18dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/female"
                    android:textSize="18dp"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_fragment_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:textSize="20dp" />

    </LinearLayout>

</FrameLayout>
