<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_detail_movie_img"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:transitionName="@string/transition_movie_img"/>

        <TextView
            android:id="@+id/tv_detail_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_detail_movie_img"
            android:layout_alignTop="@id/iv_detail_movie_img"
            android:text="movie_name"
            android:transitionName="@string/transition_movie_name"/>

        <TextView
            android:id="@+id/tv_detail_movie_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_detail_movie_img"
            android:layout_below="@id/tv_detail_movie_name"
            android:text="Average"
            android:transitionName="@string/transition_movie_average"/>

        <TextView
            android:id="@+id/tv_detail_movie_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/iv_detail_movie_img"
            android:layout_below="@id/iv_detail_movie_img"
            android:text="describe" />

    </RelativeLayout>



</android.support.v7.widget.CardView>