<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pc_0775.naugthyvideo.view.ActivityMovieDetail">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_detail_movie_img"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:background="#e1bb6a"
            android:transitionName="@string/transition_movie_img"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/tv_detail_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title"
                android:layout_gravity="center_vertical"
                android:transitionName="@string/transition_movie_name"/>
            <TextView
                android:id="@+id/tv_detail_movie_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="describe"
                android:layout_gravity="center_vertical"
                android:transitionName="@string/transition_movie_describe"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>