<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_item_moive"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@color/white"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/iv_item_home_movie"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:background="#e1bb6a"
        android:scaleType="fitXY"
        android:transitionName="@string/transition_movie_img"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">
        <TextView
            android:id="@+id/tv_item_top250_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="title"
            android:textSize="@dimen/title_font_size"
            android:layout_gravity="center_vertical"
            android:transitionName="@string/transition_movie_name"/>
        <TextView
            android:id="@+id/tv_item_top250_direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="导演"
            android:textSize="@dimen/normal_font_size"
            android:layout_below="@id/tv_item_top250_title"/>
        <TextView
            android:id="@+id/tv_item_home_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:text="9.6"
            android:textSize="40sp"
            android:layout_gravity="center_vertical"
            android:transitionName="@string/transition_movie_average"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray" />
    </RelativeLayout>
</LinearLayout>